[tool.poetry]
name = "geometries"
version = "0.1.0"
description = ""
authors = ["David Hunt <dmh89@duke.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.25"
scipy = "^1.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
